<resources>
    <string name="app_name">Comida na Medida</string>
    <string name="app_name_splash">Comida na\nMedida</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_tipo_alimento">Tipo de Alimento</string>
    <string name="hint_selecione_tipo_alimento">Selecione o tipo de alimento</string>
    <string name="label_alimento_cozido">Alimento cozido(g)</string>
    <string name="label_informe_peso_alimento_cozido">Informe o peso do alimento cozido</string>
    <string name="label_informe_quantidade_dias">Informe a quantidade de dias</string>
    <string name="label_button_calcular">Calcular</string>
    <string name="label_title">Calcule a quantidade ideal do alimento</string>
    <string name="label_result_title">Você vai precisar de:</string>
    <string name="label_button_salvar">Salvar resultado</string>
    <string name="label_button_clear">Limpar resultado</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_settings">Config.</string>
    <string name="result_format">%1$.0fg de %2$s</string>
    <string name="result_days_format">Dias: %1$d\nPorção por dia: %2$.0fg (cozido)\nTotal obtido: %3$.0fg (cozido)</string>
    <string name="result_days_historic_format">Para %1$d dias você precisará de %2$.0fg</string>
    <string name="error_select_food">Selecione um tipo de alimento</string>
    <string name="error_invalid_weight">Informe um peso válido</string>
    <string name="error_title">Ops… Algo deu errado</string>
    <string name="confirm_button">OK</string>
    <string name="item_historic">Cru: %2$.1fg -> Cozido: %1$.1fg</string>
    <string name="historico_medicoes_label">Histórico de Medições</string>
    <string name="label_settings">Configurações</string>
    <string name="label_theme">Tema</string>
    <string name="label_description_theme_mode">Selecione modo claro ou escuro</string>
    <string name="label_privacy_policy">Políticas de Privacidade</string>
    <string name="label_info_privacy_policy">Informações sobre a política de privacidade</string>
    <string name="quantity_days_label">Quantidade de dias</string>
    <string name="incrementar">Incrementar</string>
    <string name="decrementar">Decrementar</string>
    <string name="deletar_medicao">Deletar medição</string>
</resources>
