<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/spacing_20"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:fontFamily="@font/poppins_extrabold"
        android:paddingHorizontal="@dimen/spacing_20"
        android:text="@string/label_settings"
        android:textSize="@dimen/text_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_theme_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:fontFamily="@font/poppins_semibold"
        android:paddingHorizontal="@dimen/spacing_20"
        android:text="@string/label_theme"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings" />

    <LinearLayout
        android:id="@+id/ll_choise_theme_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_20"
        android:paddingVertical="@dimen/spacing_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme_mode">

        <TextView
            android:id="@+id/tv_title_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/text_label"
            tools:text="Modo noturno" />

        <TextView
            android:id="@+id/tv_description_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description_theme_mode"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dv_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_10"
        android:paddingHorizontal="@dimen/spacing_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_choise_theme_color" />

    <TextView
        android:id="@+id/tv_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:fontFamily="@font/poppins_semibold"
        android:paddingHorizontal="@dimen/spacing_20"
        android:text="@string/label_privacy_policy"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dv_theme" />

    <LinearLayout
        android:id="@+id/ll_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_20"
        android:paddingVertical="@dimen/spacing_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_term">

        <TextView
            android:id="@+id/tv_title_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/label_privacy_policy"
            android:textSize="@dimen/text_label" />

        <TextView
            android:id="@+id/tv_description_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_info_privacy_policy"
            android:textSize="@dimen/text_small" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
